Add the alt messages for each image

--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Beef Stew</h1>
   <a href="/index.html">Home</a>
-  <img src="../img/beef-stew.jpg" alt="">
+  <img src="../img/beef-stew.jpg" alt="Bef stew image">
   <p>This recipe for Salisbury steak uses good quality ground sirloin and tastes wonderful. You won't have to drain any grease from the patties once they've browned. Serve over mashed potatoes, egg noodles, or rice. Simply delightful!</p>
   <h2>Ingredients</h2>
   <ul>
