--- a/recipes/chicken-stew.html
+++ b/recipes/chicken-stew.html
@@ -11,7 +11,7 @@
   <h1>Chicken Stew</h1>
   <a href="/index.html">Home</a>
   <div>
-    <img src="../img/chicken-stew.jpg" alt="">
+    <img src="../img/chicken-stew.jpg" alt="chicken stew image">
     <p>Use a cast iron skillet to cook perfectly juicy and tender chicken breasts. Make sure your skillet is hot and the
       chicken sizzles as it hits the pan to prevent sticking. </p>
     <h2>Ingredients</h2>
