--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
   <div>
     <h1>Lasagna</h1>
     <a href="/index.html">Home</a>
-    <img src="../img/chicken.jpg" alt="">
+    <img src="../img/chicken.jpg" alt="lasagna image">
     <p>This extra-crispy sheet pan chicken and veggies dinner is baked on one pan and packed with flavor!</p>
     <h2>Ingredients</h2>
     <ul>
